# ruff-config-shared

./: .gitignore  LICENSE  README.md  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/teo_ruff_config_shared/: __init__.py  ruff.toml
