[project]
name = "teo-ruff-config-shared"
version = "0.1.0"
description = "Shared Ruff configuration for teo-garcia Python templates"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "teo-garcia" }]
keywords = ["ruff", "lint", "format", "shared", "python"]
dependencies = []

[project.scripts]
teo-ruff-config-path = "teo_ruff_config_shared:_cli"

[project.urls]
Repository = "https://github.com/teo-garcia/ruff-config-shared"

[dependency-groups]
dev = ["ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teo_ruff_config_shared"]

[tool.ruff]
extend = "src/teo_ruff_config_shared/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"src/**" = ["T20"]
